bk_ida/gobmkida/g2/defend3
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/defend3/src/engine/reading.c:2062:13: error: use of undeclared identifier 'dword_76BCFC'
v46 = v44 + dword_76BCFC[i]; 
            ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/defend3/src/engine/reading.c:2177:22: error: use of undeclared identifier 'dword_76BCFC'
v11 = ( unsigned int)dword_76BCFC[v78]; 
                     ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/defend3/src/engine/reading.c:2330:7: error: use of undeclared identifier 'dword_76BCFC'
v32 = dword_76BCFC[v30]; 
      ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/defend3/src/obj/1/reading.o] Error 1
